# networks

./: README.md  networks.cabal  stack.yaml
.stack-work/install/65995373/flag-cache/: MonadRandom-0.5.1-IY6HiWu00vQLARukQW3KMH  ansi-terminal-0.6.2.3-Az560Cs0ObY6ZODYjxtBiR  ansi-wl-pprint-0.6.7.3-DiRD02X4Bp4CayfqPjYmEo  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  bifunctors-5.4.1-AIir6TYn0Fu3E8mskp4Bo2  cabal-helper-0.7.3.0-GgnMvw3xDqG5ig90b4nErY  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.15-82Rd8qGnkh7BxXgtGQcKKM  comonad-5-LbHOGqrrgsq4aG9g7JnnEp  contravariant-1.4-Vg1r50t5No5TRmMpARyoS  cpphs-1.20.4-4XwNO0S8wYFCjtdnoM9Yn6  distributive-0.5.2-JCgfTXNR3ywAyV7fFWIBI5  djinn-ghc-0.0.2.3-5z85bZcLoZHKC4DwT3srQu  djinn-lib-0.0.1.2-4AmYn3IUBZ15IuinyTpUzc  either-4.4.1.1-JuWMskKxwDnBreJXgTNmfM  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  extra-1.5.1-L4x8M89MgXI2YSncEziqu8  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fclabels-2.0.3.2-4EezQlp7n1w9uoh5Y3yxAt  free-4.12.4-Fh1WpF6IN8e68CgG2wuBW  ghc-mod-5.7.0.0-ILM6fSxqdTn9IB4sRwDtay  ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  ghc-syb-utils-0.2.3-AUrnhzkH67L4pEUPWJ0CZJ  happy-1.19.5  haskell-src-exts-1.18.2-FdgZn6spuZY5gmAQFozK1k  hlint-1.9.41-82145UfwKpt6B5rVYgUc3B  hmatrix-0.18.0.0-9PrG8kjjQ4bGVCRjCitsBt  hnn-0.3-BKD6Q1V1t9O678kyRvzCXE  mmorph-1.0.9-5bASEvmIkr5CpdAYXwPsn0  monad-control-1.0.1.0-LQwQ0Hi5p0oAccTfTzbfD5  monad-journal-0.7.2-C0b5sZqVbIMEtUACJkzhlY  mwc-random-0.13.5.0-ELHSKL9e3jrGkA1HowgdUj  networks-0.1.0.0-8MvwABPgKe0DIamyIk8TMx  networks-0.1.0.0-HTY2H5eCRz25kutUdEwqf  (+20 more)
app/: Main.hs
src/: AND.hs  Lib.hs
(+42 files in other folders)
