name:                networks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yohad/networks#readme
license:             BSD3
license-file:        LICENSE
author:              Yotam Ohad
maintainer:          yotam2206@gmail.com
copyright:           2017 Yotam Ohad
category:            Neural Networks
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , hmatrix >= 0.18
                     , hnn
  default-language:    Haskell2010

executable networks-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , networks
  default-language:    Haskell2010

test-suite networks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , networks
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yohad/networks
